@@ -46,3 +46,4 @@ ComposedDistribution(RandomMixture(Normal(mu = 0, sigma = 1.41421)), RandomMixtu
 ComposedDistribution(RandomMixture(Normal(mu = 3, sigma = 1)), RandomMixture(Normal(mu = 3, sigma = 1)), IndependentCopula(dimension = 2))
 ComposedDistribution(RandomMixture(Normal(mu = 0, sigma = 1.41421)), RandomMixture(Normal(mu = 0, sigma = 1.41421)), IndependentCopula(dimension = 2))
 ComposedDistribution(RandomMixture(Normal(mu = -3, sigma = 1)), RandomMixture(Normal(mu = -3, sigma = 1)), IndependentCopula(dimension = 2))
+RandomMixture(Normal(mu = -7, sigma = 2))
