@@ -173,3 +173,8 @@ print(ot.Normal(2) + ot.Normal(2))
 print(ot.Normal(2) + 3.0)
 print(ot.Normal(2) - ot.Normal(2))
 print(ot.Normal(2) - 3.0)
+
+# unary minus
+x = ot.Normal(7.0, 2.0)
+print(-x)
+
