@@ -39,6 +39,7 @@
  * #983 (Bogus Normal parameter distribution)
  * #995 (Pip does not recognize conda install of openturns)
  * #1000 (SaltelliSensitivityAlgorithm with LowDiscrepancyExperiment produces wrong results)
+ * #1024 (The unary operator is undefined for Normal distribution)
 
 == 1.12 release (2018-11-08) == #release-1.12
 
